--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,5 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-
-data_collecction/va_precincts/*
 .vscode/settings.json
+data_collection/va_precincts/**
